# hasha

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile.config  Makefile.mingw  Makefile.win  NODEPS-PKGBUILD  PKGBUILD  PKGBUILD-NODEPS  README.md  TERMUX  configure  upd_ver_hdr.sh
.github/workflows/: arm-debian-gcc.yml  arm-ubuntu.yml  arm64-msys2-windows.yml  makefile-ubuntu.yml  makefile-windows.yml  makefile.yml  x86_64-msys2-clang.yml  x86_64-msys2-gcc.yml  x86_64-msys2-windows.yml  x86_64-ubuntu-clang.yml  x86_64-ubuntu-gcc.yml  x86_64-ubuntu-tcc.yml  x86_64-ubuntu.yml
docs/: CNAME  annotated.html  annotated_dup.js  classes.html  dir_000000_000002.html  dir_000003_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_85f9138f07c20f37adf55a1b4ce19dcc.html  dir_85f9138f07c20f37adf55a1b4ce19dcc.js  dir_85f9138f07c20f37adf55a1b4ce19dcc_dep.dot  dir_a4a1bd6a6f47eff74681f752ad8bc128.html  dir_a4a1bd6a6f47eff74681f752ad8bc128.js  dir_a4a1bd6a6f47eff74681f752ad8bc128_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d44c64559bbebec7f509842c48db8b23_dep.dot  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_defs.html  globals_dup.js  globals_func.html  globals_g.html  globals_h.html  globals_k.html  globals_m.html  globals_s.html  globals_type.html  globals_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  (+30 more)
docs/html/: dir_000000_000002.html  dir_85f9138f07c20f37adf55a1b4ce19dcc.js  doxygen_crawl.html  globals_func.html  graph_legend.html  navtreedata.js  navtreeindex1.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_c.js  functions_0.js  functions_1.js  (+35 more)
examples/: bench.c  cli.c  hasha.c  hashabench.c  hashasum.c
include/hasha/: acel.h  all.h  blake2.h  crc.h  (+26 more)
python/: csv2png.py
scripts/: 1m-iter.gnu  per-iter.gnu
src/: acel.c  blake2b.c  blake2s.c  blake3.c  crc.c  endian.h  error.c  evp.c  io.c  keccak.c  keccak.h  keccak1600.c  keccak_perm.c  keccakf1600.c  md5.c  opts.c  pp.cc  sha1.c  sha2.c  sha3.c  sha3_keccak.c  ver.c  ver.h
tests/: e2e.c  main.c  run.c  unit.c  unit.cc
utils/: hasha.c  hashabench.c  hashacli.c  hashasum.c
(+384 files in other folders)
